force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__SLA_Violation__c/fields/agf__Age__c.field-meta.xml
<CustomField>
    <fullName>agf__Age__c</fullName>
    <description>Number of days the SLA Violation has been open. Stops increasing once the SLA Violation is closed.</description>
    <formula>IF(ISNULL(agf__Closed_Date__c),
  CEILING(NOW() - CreatedDate),
  CEILING(agf__Closed_Date__c  - CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>