force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__SLA_Violation__c/fields/agf__Closed__c.field-meta.xml
<CustomField>
    <fullName>agf__Closed__c</fullName>
    <formula>ISPICKVAL(agf__Status__c,&quot;Closed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>