force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__SLA_Violation__c/fields/agf__Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Closed_Date__c</fullName>
    <description>Date and Time when the SLA Violation was corrected/closed</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>