force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__SLA_Violation__c/fields/agf__Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>agf__Created_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>