force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__SLA_Violation__c/fields/agf__Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>agf__Severity_Level__c</fullName>
    <label>Severity Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>