force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__SLA_Violation__c/fields/agf__Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Team assigned to the investigation when SLA was violated</description>
    <label>Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>SLA Violations</relationshipLabel>
    <relationshipName>SLA_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>